crates/shipper-core/src/state/store/snapshots/shipper_core__store__snapshot_tests__registry_custom.snap
---
source: crates/shipper-core/src/state/store/snapshot_tests.rs
expression: json
---
{
  "name": "my-registry",
  "api_base": "https://my-registry.example.com",
  "index_base": "https://index.my-registry.example.com"
}
