crates/shipper-core/src/state/store/snapshots/shipper_core__store__snapshot_tests__state_persisted_json.snap
---
source: crates/shipper-core/src/state/store/snapshot_tests.rs
expression: pretty
---
{
  "attempt_history": [],
  "created_at": "2025-01-15T12:00:00Z",
  "packages": {
    "alpha@0.1.0": {
      "attempts": 1,
      "last_updated_at": "2025-01-15T12:00:00Z",
      "name": "alpha",
      "state": {
        "state": "published"
      },
      "version": "0.1.0"
    },
    "beta@0.2.0": {
      "attempts": 0,
      "last_updated_at": "2025-01-15T12:00:00Z",
      "name": "beta",
      "state": {
        "state": "pending"
      },
      "version": "0.2.0"
    }
  },
  "plan_id": "plan-persist",
  "registry": {
    "api_base": "https://crates.io",
    "index_base": "https://index.crates.io",
    "name": "crates-io"
  },
  "state_version": "shipper.state.v1",
  "updated_at": "2025-01-15T12:00:00Z"
}
