crates/shipper-core/src/state/store/snapshots/shipper_core__store__snapshot_tests__state_with_custom_registry.snap
---
source: crates/shipper-core/src/state/store/snapshot_tests.rs
expression: json
---
{
  "state_version": "shipper.state.v1",
  "plan_id": "plan-custom-reg",
  "registry": {
    "name": "my-private-registry",
    "api_base": "https://registry.internal.example.com/api/v1",
    "index_base": "https://index.internal.example.com/git/index"
  },
  "created_at": "2025-01-15T12:00:00Z",
  "updated_at": "2025-01-15T12:00:00Z",
  "attempt_history": [],
  "packages": {
    "my-lib@0.1.0": {
      "name": "my-lib",
      "version": "0.1.0",
      "attempts": 0,
      "state": {
        "state": "pending"
      },
      "last_updated_at": "2025-01-15T12:00:00Z"
    }
  }
}
